Disable nightly page generation

--- a/.github/workflows/nightly_page.yml
+++ b/.github/workflows/nightly_page.yml
@@ -9,6 +9,7 @@ jobs:
   nightly-report:
     name: Update Github page
     runs-on: ubuntu-latest
+    if: false
     steps:
       - name: Checkout Arrow
         shell: bash
